--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,9 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build
-      shell: bash
-      run: make build
+    - name: Build day01
+      working-directory: day01
+      run: cargo build --verbose
     - name: Run tests
-      shell: bash
-      run: make test
+      working-directory: day01
+      run: cargo test --verbose
